Repackage to io.github.dfa1.rocksdbffm
Move all sources from com.example.{ffm,benchmark,jni} to
io.github.dfa1.rocksdbffm.{,benchmark,jni} and update Maven
coordinates to groupId=io.github.dfa1 / artifactId=rocksdbffm.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>