@@ -1,8 +1,11 @@
-package com.example.benchmark;
+package io.github.dfa1.rocksdbffm.benchmark;
 
-import com.example.ffm.RocksDB;
-import com.example.ffm.WriteBatch;
 import org.openjdk.jmh.annotations.*;
+import org.rocksdb.Options;
+import org.rocksdb.ReadOptions;
+import org.rocksdb.RocksDB;
+import org.rocksdb.WriteBatch;
+import org.rocksdb.WriteOptions;
 
 import java.io.IOException;
 import java.nio.ByteBuffer;
@@ -16,8 +19,12 @@ import java.util.concurrent.TimeUnit;
 @State(Scope.Benchmark)
 @Warmup(iterations = 3, time = 1)
 @Measurement(iterations = 5, time = 1)
-@Fork(value = 1, jvmArgsPrepend = "--enable-native-access=ALL-UNNAMED")
-public class FfmBenchmark {
+@Fork(1)
+public class JniBenchmark {
+
+    static {
+        RocksDB.loadLibrary();
+    }
 
     private static final int NUM_KEYS = 10_000;
     private static final int BATCH_SIZE = 100;
@@ -26,6 +33,9 @@ public class FfmBenchmark {
     private static final byte[] BATCH_VALUE = "batch-value-data-0123456789".getBytes();
 
     private RocksDB db;
+    private Options options;
+    private WriteOptions writeOptions;
+    private ReadOptions readOptions;
     private Path dbPath;
 
     private ByteBuffer writeKeyBuf;
@@ -42,8 +52,11 @@ public class FfmBenchmark {
 
     @Setup(Level.Trial)
     public void setup() throws Exception {
-        dbPath = Files.createTempDirectory("bench-ffm-");
-        db = RocksDB.open(dbPath.toString());
+        dbPath = Files.createTempDirectory("bench-jni-");
+        options = new Options().setCreateIfMissing(true);
+        db = RocksDB.open(options, dbPath.toString());
+        writeOptions = new WriteOptions();
+        readOptions = new ReadOptions();
 
         writeKeyBuf = ByteBuffer.allocateDirect(WRITE_KEY.length);
         writeKeyBuf.put(WRITE_KEY).flip();
@@ -64,51 +77,46 @@ public class FfmBenchmark {
         for (int i = 0; i < BATCH_SIZE; i++) {
             batchKeys[i] = ("batch-key-" + i).getBytes();
         }
-        batch = WriteBatch.create();
+        batch = new WriteBatch();
     }
 
     @TearDown(Level.Trial)
-    public void teardown() throws IOException {
+    public void teardown() throws Exception {
         batch.close();
         db.close();
+        options.close();
+        writeOptions.close();
+        readOptions.close();
         deleteDir(dbPath);
     }
 
     @Benchmark
-    public void writes() {
+    public void writes() throws Exception {
         writeKeyBuf.rewind();
         writeValBuf.rewind();
-        db.put(writeKeyBuf, writeValBuf);
+        db.put(writeOptions, writeKeyBuf, writeValBuf);
     }
 
     @Benchmark
-    public int reads(Counter counter) {
+    public int reads(Counter counter) throws Exception {
         ByteBuffer key = readKeyBufs[counter.index++ % NUM_KEYS];
         key.rewind();
         readValBuf.clear();
-        return db.get(key, readValBuf);
+        return db.get(readOptions, key, readValBuf);
     }
 
     @Benchmark
-    public void batchWrites() {
+    public void batchWrites() throws Exception {
         batch.clear();
         for (int i = 0; i < BATCH_SIZE; i++) {
             batch.put(batchKeys[i], BATCH_VALUE);
         }
-        db.write(batch);
+        db.write(writeOptions, batch);
     }
 
     private static void deleteDir(Path dir) throws IOException {
         Files.walk(dir)
              .sorted(Comparator.reverseOrder())
              .forEach(p -> p.toFile().delete());
-    }
-
-     static void main() throws Exception {
-        org.openjdk.jmh.runner.options.Options opt = new org.openjdk.jmh.runner.options.OptionsBuilder()
-                .include(FfmBenchmark.class.getSimpleName())
-                .build();
-
-        new org.openjdk.jmh.runner.Runner(opt).run();
     }
 }
